Fix spacing with bullet points

--- a/_sass/_pages.scss
+++ b/_sass/_pages.scss
@@ -30,6 +30,10 @@ h3 {
     margin-left: 0;
 }
 
+li {
+    padding-bottom: 10px;
+}
+
 .btn-brand {
     color: $brand-color !important;
     border-color: $brand-color;
